configuring java version